[package]
name = "aria2-rs-yet"
version = "0.1.4"
edition = "2021"
authors = ["hxzhao527 <haoxiangzhao@outlook.com>"]
description = "Yet Another Aria2 JSON-RPC Client."
keywords = ["aria2c", "websocket"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hxzhao527/aria2-rs-yet"

[dependencies]
futures-util = { version = "0.3.31", default-features = false,  features = ["sink"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12.0"
thiserror = "2.0"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
tokio-tungstenite = "0.26.1"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["sync", "time", "macros", "signal", "rt-multi-thread"]}
